# advent-of-code-2021

./: .template.py  README.md  install  newday  pyproject.toml  setup.py  solve
adventofcode2021/: input_data.py
adventofcode2021/days01to05/: day01.py  day02.py  day03.py  day04.py  day05.py
adventofcode2021/days06to10/: day06.py  day07.py  day08.py  day09.py  day10.py
adventofcode2021/days11to15/: day11.py  day12.py  day13.py  day14.py  day15.py
adventofcode2021/days16to20/: day16.py  day17.py  day18.py
src/: day01.py  day01_data.py  day03.py  day04.py  day05.py  day06.py  input_data.py
